syntax="proto2"
package word_index_proto;

message Pair {
  required int32 beg = 1;
  required int32 end = 2;
};

message WordInfo{
  required uint64 doc_id = 1;
  required string _word = 2;
  required string _explain = 3;
  repeated Pair explain_token = 4;
};

message Weight{
  required uint64 doc_id = 1;
  required int32 weight = 2;
};

message KwdInfo{
  required string key = 1;
  required Weight value = 2;
};

message Index{
  repeated WordInfo sequence_index = 1;
  repeated KwdInfo inverted_index = 2;
};
